feat: status NONE 추가